--- a/css/wbps.css
+++ b/css/wbps.css
@@ -227,7 +227,7 @@
 	.wbps_h3 {
 		font-size: 1rem;
 		font-weight: lighter;
-		color: blanchedalmond;
+		color: black;
 		background-color: #00e5f2;
 		padding: 8px;
 		margin-bottom: 5px;
